# BurnRate

./: .aiignore  .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  docker-compose.yml
alerts/: budget-alerts.yaml
cost-guard/: Dockerfile  pyproject.toml
cost-guard/src/guard/: actions.py  investigate.py  report.py  webhook.py
cost-guard/src/guard/prompts/: __init__.py
dashboards/: burn-rate-live.json  cost-by-agent.json  model-efficiency.json
demo-app/: Dockerfile  pyproject.toml
demo-app/src/demo/: app.py  chaos.py  fake_llm.py
demo-app/src/demo/agents/: researcher.py  summarizer.py
docker/: otel-collector-config.yml
docs/: demo-script.md  demo-storyboard.html  index.html  semconv-proposal.md  vo-elevenlabs.md
pours/deployment/: compose.yaml
scripts/: export-dashboards.sh
video/: package-lock.json  package.json
video/src/: ChapterCard.tsx  ColdOpen.tsx  Intro.tsx  Logo.tsx  Outro.tsx  Root.tsx  brand.ts
