[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnrate-cost-guard"
version = "0.1.0"
description = "Cost Guard agent for Burnrate — diagnoses LLM cost incidents via SigNoz MCP."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/guard"]
