[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnrate-demo-app"
version = "0.1.0"
description = "Demo app — multi-agent research pipeline for Burnrate demonstrations."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "burnrate-otel>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]
